// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectMenu renders when isMultiSelect is false 1`] = `
<div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
</div>
`;

exports[`MultiSelectMenu renders when isMultiSelect is true 1`] = `
<div>
  <div
    class="clearfix"
  >
    <div
      aria-label="copy or move items"
      class="btn-group"
      role="group"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Copy to list
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Move to list
      </button>
    </div>
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Hide Select
    </button>
  </div>
</div>
`;

exports[`MultiSelectMenu renders with empty selected items array 1`] = `
<div>
  <div
    class="clearfix"
  >
    <div
      aria-label="copy or move items"
      class="btn-group"
      role="group"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Copy to list
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Move to list
      </button>
    </div>
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Hide Select
    </button>
  </div>
</div>
`;
